Fix wrong tick symbol

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.properties
@@ -1,6 +1,7 @@
 button.down.text=\uf0ab
 button.plus.text=\uf067
 button.send.text=\uf075
+label.status.check=\uf00c
 popup.image.icon=\uf03e
 popup.image.text=Upload an image
 popup.location.icon=\uf041
