--- a/App/build.gradle
+++ b/App/build.gradle
@@ -37,6 +37,7 @@ dependencies {
     implementation "com.gluonhq.attach:display:$attachVersion:$platform"
     implementation "com.gluonhq.attach:lifecycle:$attachVersion:$platform"
     implementation "com.gluonhq.attach:storage:$attachVersion:$platform"
+    implementation "com.gluonhq.attach:statusbar:$attachVersion"
     implementation "com.gluonhq.attach:cache:$attachVersion:$platform"
     implementation "com.gluonhq.attach:util:$attachVersion"
     if (platform == "desktop") {
@@ -84,7 +85,6 @@ gluonClient {
              "com.gluonhq.attach.lifecycle.impl.DesktopLifecycleService",
              "com.gluonhq.attach.orientation.impl.DesktopOrientationService",
              "com.gluonhq.attach.position.impl.DesktopPositionService",
-             "com.gluonhq.attach.statusbar.impl.DesktopStatusBarService",
              "com.gluonhq.attach.storage.impl.DesktopStorageService"] :
             ["com.gluonhq.attach.cache.impl.IOSCacheService",
              "com.gluonhq.attach.display.impl.IOSDisplayService",
