--- a/App/src/ios/Default-Info.plist
+++ b/App/src/ios/Default-Info.plist
@@ -3,11 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.gluonhq.chat.GluonChat</string>
+	<string>com.gluonhq.chat.GluonChatApp</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.0.3</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.3</string>
 	<key>CFBundleExecutable</key>
 	<string>AppApp</string>
 	<key>CFBundleIconName</key>
@@ -58,8 +58,16 @@
         </dict>
     </dict>
     <key>NSLocationUsageDescription</key>
-    <string>Gluon Maps Mobile Sample requires Location Service enabled</string>
+    <string>The ChatApp requires Location Service enabled to share your location</string>
     <key>NSLocationWhenInUseUsageDescription</key>
-    <string>Gluon Maps Mobile Sample requires Location Service enabled</string>
+    <string>The ChatApp requires Location Service enabled to share your location</string>
+    <key>NSLocationAlwaysUsageDescription</key>
+    <string>The ChatApp requires Location Service enabled to share your location</string>
+    <key>NSCameraUsageDescription</key>
+    <string>The ChatApp requires access to the Camera to share pictures</string>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>The ChatApp requires access to the Photo Library to share pictures</string>
+    <key>NSPhotoLibraryAddUsageDescription</key>
+    <string>The ChatApp requires access to the Photo Library to share pictures</string>
 </dict>
 </plist>
