--- a/services/orientation/pom.xml
+++ b/services/orientation/pom.xml
@@ -9,6 +9,7 @@
         <groupId>com.gluonhq</groupId>
         <artifactId>ChatApp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <dependencies>
