Add target directory to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,13 +23,13 @@
 hs_err_pid*
 .gradle
 .idea
-App/build
-ChatListView/build
-services/orientation/build
-services/position/build
-EmojiData/build
-EmojiPopOver/build
-EmojiTextArea/build
+App/target
+ChatListView/target
+services/orientation/target
+services/position/target
+EmojiData/target
+EmojiPopOver/target
+EmojiTextArea/target
 App/src/mac
 images
 messages
