--- a/App/pom.xml
+++ b/App/pom.xml
@@ -56,6 +56,7 @@
                         <list>com.gluonhq.chat.views.maps</list>
                         <list>com.gluonhq.chat.views.portrait</list>
                         <list>com.gluonhq.chat.views.users</list>
+                        <list>org.glassfish.json.messages</list>
                         <!--<list>com.gluonhq.emoji.popup.emoji-popover</list>-->
                         <!--<list>controlsfx</list>-->
                     </bundlesList>
@@ -64,13 +65,6 @@
                         <list>com.gluonhq.chat.model.ChatMessage</list>
                         <list>com.gluonhq.chat.model.ChatImage</list>
                         <list>org.glassfish.json.JsonProviderImpl</list>
-                        <!--<list>com.gluonhq.emoji.Emoji</list>-->
-                        <list>com.gluonhq.impl.charm.glisten.control.skin.GlistenButtonSkin</list>
-                        <list>com.gluonhq.impl.charm.glisten.control.skin.GlistenToggleButtonSkin</list>
-                        <!--<list>impl.org.controlsfx.skin.PopOverSkin</list>-->
-                        <!--<list>javafx.css.converter.SizeConverter\$SequenceConverter</list>-->
-                        <!--<list>com.gluonhq.attach.orientation.impl.DesktopOrientationService</list>
-                        <list>com.gluonhq.attach.position.impl.DesktopPositionService</list>-->
                     </reflectionList>
                     <!--<jniList>
                         <list>com.gluonhq.attach.orientation.impl.DesktopOrientationService</list>
@@ -122,8 +116,7 @@
             <groupId>org.glassfish</groupId>
             <artifactId>jakarta.json</artifactId>
             <version>1.1.5</version>
-            <!--<scope>runtime</scope>-->
-            <classifier>module</classifier>
+            <scope>runtime</scope>
         </dependency>
         
         <!-- Attach -->
@@ -131,6 +124,7 @@
             <groupId>com.gluonhq.attach</groupId>
             <artifactId>cache</artifactId>
             <version>${attachVersion}</version>
+            <classifier>desktop</classifier>
         </dependency>
         <dependency>
             <groupId>com.gluonhq.attach</groupId>
