--- a/App/src/ios/Default-Info.plist
+++ b/App/src/ios/Default-Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0.3</string>
 	<key>CFBundleExecutable</key>
-	<string>AppApp</string>
+	<string>App</string>
 	<key>CFBundleIconName</key>
 	<string>AppIcon</string>
 	<key>CFBundleName</key>
