--- a/App/pom.xml
+++ b/App/pom.xml
@@ -37,7 +37,7 @@
                 <artifactId>client-maven-plugin</artifactId>
                 <version>${client-maven-plugin-version}</version>
                 <configuration>
-                     <target>${clientTarget}</target>
+                    <target>${clientTarget}</target>
                     <attachList>
                         <list>cache</list>
                         <list>device</list>
@@ -97,22 +97,46 @@
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>glisten-afterburner</artifactId>
-            <version>2.0.1</version>
+            <version>${glistenAfterburnerVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>charm-glisten</artifactId>
-            <version>6.0.2</version>
+            <version>${glistenVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>charm-cloudlink-client</artifactId>
-            <version>6.0.2</version>
+            <version>${glistenVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>maps</artifactId>
-            <version>2.0.0-ea+2</version>
+            <version>${mapsVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
