--- a/EmojiData/pom.xml
+++ b/EmojiData/pom.xml
@@ -14,7 +14,13 @@
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>connect</artifactId>
-            <version>2.0.1</version>
+            <version>${connectVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
