--- a/EmojiPopOver/pom.xml
+++ b/EmojiPopOver/pom.xml
@@ -9,21 +9,13 @@
         <artifactId>ChatApp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.3</version>
-                <configuration>
-                    <mainClass>${mainClassName}</mainClass>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
     
     <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-controls</artifactId>
+            <version>${javafxVersion}</version>
+        </dependency>
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>EmojiData</artifactId>
@@ -32,7 +24,13 @@
         <dependency>
             <groupId>org.controlsfx</groupId>
             <artifactId>controlsfx</artifactId>
-            <version>11.0.0</version>
+            <version>${controlsfxVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
