--- a/services/position/pom.xml
+++ b/services/position/pom.xml
@@ -26,7 +26,13 @@
         <dependency>
             <groupId>com.gluonhq</groupId>
             <artifactId>maps</artifactId>
-            <version>2.0.0-ea+2</version>
+            <version>${mapsVersion}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.openjfx</groupId>
+                    <artifactId>*</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
     </dependencies>
 </project>
