--- a/App/pom.xml
+++ b/App/pom.xml
@@ -5,8 +5,8 @@
     <name>App</name>
 
     <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>ChatApp</artifactId>
+        <groupId>com.gluonhq.chatapp</groupId>
+        <artifactId>chatapp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
@@ -189,7 +189,7 @@
         </dependency>
 
         <dependency>
-            <groupId>com.gluonhq</groupId>
+            <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>ChatListView</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
@@ -208,12 +208,12 @@
             </properties>
             <dependencies>
                 <dependency>
-                    <groupId>com.gluonhq</groupId>
+                    <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>orientation</artifactId>
                     <version>1.1.0-SNAPSHOT</version>
                 </dependency>
                 <dependency>
-                    <groupId>com.gluonhq</groupId>
+                    <groupId>com.gluonhq.chatapp</groupId>
                     <artifactId>position</artifactId>
                     <version>1.1.0-SNAPSHOT</version>
                 </dependency>
