--- a/EmojiData/pom.xml
+++ b/EmojiData/pom.xml
@@ -5,8 +5,8 @@
     <name>EmojiData</name>
 
     <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>ChatApp</artifactId>
+        <groupId>com.gluonhq.chatapp</groupId>
+        <artifactId>chatapp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     
