--- a/EmojiPopOver/pom.xml
+++ b/EmojiPopOver/pom.xml
@@ -5,8 +5,8 @@
     <name>EmojiPopOver</name>
 
     <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>ChatApp</artifactId>
+        <groupId>com.gluonhq.chatapp</groupId>
+        <artifactId>chatapp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
     
@@ -17,7 +17,7 @@
             <version>${javafxVersion}</version>
         </dependency>
         <dependency>
-            <groupId>com.gluonhq</groupId>
+            <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
