--- a/EmojiTextArea/pom.xml
+++ b/EmojiTextArea/pom.xml
@@ -5,8 +5,8 @@
     <name>EmojiTextArea</name>
 
     <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>ChatApp</artifactId>
+        <groupId>com.gluonhq.chatapp</groupId>
+        <artifactId>chatapp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
     </parent>
 
@@ -61,12 +61,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.gluonhq</groupId>
+            <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiData</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
-            <groupId>com.gluonhq</groupId>
+            <groupId>com.gluonhq.chatapp</groupId>
             <artifactId>EmojiPopOver</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
