--- a/services/orientation/pom.xml
+++ b/services/orientation/pom.xml
@@ -6,8 +6,8 @@
     <description>API to access orientation features for the desktop platform</description>
 
     <parent>
-        <groupId>com.gluonhq</groupId>
-        <artifactId>ChatApp</artifactId>
+        <groupId>com.gluonhq.chatapp</groupId>
+        <artifactId>chatapp</artifactId>
         <version>1.1.0-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
