--- a/.gitignore
+++ b/.gitignore
@@ -1,35 +1,24 @@
+# Gradle
+.gradle
+build
+
+# Maven
+target
+
+# IntelliJ IDEA
+.idea
+*.iml
+
 # Compiled class file
 *.class
 
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
-.gradle
-.idea
-App/target
-ChatListView/target
-services/orientation/target
-services/position/target
-EmojiData/target
-EmojiPopOver/target
-EmojiTextArea/target
+
+# Miscellenous
 App/src/mac
 images
 messages
