--- a/pom.xml
+++ b/pom.xml
@@ -21,18 +21,17 @@
     
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
 
-        <glistenVersion>6.0.2</glistenVersion>
-        <glistenAfterburnerVersion>2.0.2</glistenAfterburnerVersion>
-        <attachVersion>4.0.5</attachVersion>
-        <mapsVersion>2.0.0-ea+2</mapsVersion>
+        <glistenVersion>6.0.4</glistenVersion>
+        <glistenAfterburnerVersion>2.0.4</glistenAfterburnerVersion>
+        <attachVersion>4.0.8-SNAPSHOT</attachVersion>
+        <mapsVersion>2.0.0-ea+3</mapsVersion>
         <connectVersion>2.0.1</connectVersion>
-        <javafxVersion>15-ea+1</javafxVersion>
+        <javafxVersion>15-ea+3</javafxVersion>
         <controlsfxVersion>11.0.1</controlsfxVersion>
         <javafx-maven-plugin-version>0.0.4</javafx-maven-plugin-version>
-        <client-maven-plugin-version>0.1.17-SNAPSHOT</client-maven-plugin-version>
+        <client-maven-plugin-version>0.1.24-SNAPSHOT</client-maven-plugin-version>
     </properties>
     
     <repositories>
@@ -44,17 +43,11 @@
             <id>Gluon Snapshots</id>
             <url>https://nexus.gluonhq.com/nexus/content/repositories/public-snapshots</url>
         </repository>
+        <repository>
+            <id>Snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </repository>
     </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>Gluon Releases</id>
-            <url>https://nexus.gluonhq.com/nexus/content/repositories/releases/</url>
-        </pluginRepository>
-        <pluginRepository>
-            <id>Gluon Snapshots</id>
-            <url>https://nexus.gluonhq.com/nexus/content/repositories/public-snapshots</url>
-        </pluginRepository>
-    </pluginRepositories>
 
     <build>
         <plugins>
@@ -63,15 +56,22 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <release>11</release>
+                    <release>${maven.compiler.release}</release>
                 </configuration>
             </plugin>
         </plugins>
     </build>
 
+    <pluginRepositories>
+        <pluginRepository>
+            <id>Snapshots</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <organization>
         <name>Gluon</name>
-        <url>https://www.gluonhq.com</url>
+        <url>https://gluonhq.com</url>
     </organization>
 
     <issueManagement>
