--- a/pom.xml
+++ b/pom.xml
@@ -25,13 +25,13 @@
 
         <glistenVersion>6.0.4</glistenVersion>
         <glistenAfterburnerVersion>2.0.4</glistenAfterburnerVersion>
-        <attachVersion>4.0.8-SNAPSHOT</attachVersion>
-        <mapsVersion>2.0.0-ea+3</mapsVersion>
+        <attachVersion>4.0.11</attachVersion>
+        <mapsVersion>2.0.0-ea+5</mapsVersion>
         <connectVersion>2.0.1</connectVersion>
-        <javafxVersion>15-ea+3</javafxVersion>
-        <controlsfxVersion>11.0.1</controlsfxVersion>
-        <javafx-maven-plugin-version>0.0.4</javafx-maven-plugin-version>
-        <client-maven-plugin-version>0.1.24-SNAPSHOT</client-maven-plugin-version>
+        <javafxVersion>16</javafxVersion>
+        <controlsfxVersion>11.1.0</controlsfxVersion>
+        <javafx-maven-plugin-version>0.0.6</javafx-maven-plugin-version>
+        <gluonfx-maven-plugin-version>1.0.3</gluonfx-maven-plugin-version>
     </properties>
     
     <repositories>
