Dummy Service + Dark Mode (#36)

--- a/App/src/main/resources/com/gluonhq/chat/views/chat.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.properties
@@ -2,6 +2,8 @@ button.down.text=\uf0ab
 button.plus.text=\uf067
 button.send.text=\uf075
 label.status.check=\uf00c
+button.emoji.text=\uf118
+button.paperclip.text=\uf0c6
 popup.image.icon=\uf03e
 popup.image.text=Upload an image
 popup.location.icon=\uf041
