--- a/App/pom.xml
+++ b/App/pom.xml
@@ -28,6 +28,25 @@
                     </options>
                     <mainClass>${mainClassName}</mainClass>
                 </configuration>
+                <executions>
+                    <execution>
+                        <!-- Default configuration for running -->
+                        <id>default-cli</id>
+                        <configuration>
+                            <mainClass>${mainClassName}</mainClass>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <!-- Configuration for debugging -->
+                        <id>debug</id>
+                        <configuration>
+                            <options>
+                                <option>-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:8000</option>
+                            </options>
+                            <mainClass>${mainClassName}</mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
             <plugin>
                 <groupId>com.gluonhq</groupId>
@@ -62,7 +81,7 @@
                         <item>logging.properties</item>
                     </resourcesList>
                     <reflectionList>
-                        <list>com.gluonhq.chat.service.Service</list>
+                        <list>com.gluonhq.chat.service.CloudlinkService</list>
                         <list>com.gluonhq.chat.model.ChatMessage</list>
                         <list>com.gluonhq.chat.model.ChatImage</list>
                         <list>com.gluonhq.chat.views.ChatPresenter</list>
@@ -95,6 +114,19 @@
             <artifactId>javafx-fxml</artifactId>
             <version>${javafxVersion}</version>
         </dependency>
+        <!-- TODO: Remove -->
+        <!--
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${javafxVersion}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>${javafxVersion}</version>
+        </dependency>
+        -->
         <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
@@ -209,6 +241,11 @@
             <artifactId>ChatListView</artifactId>
             <version>1.1.0-SNAPSHOT</version>
         </dependency>
+        <!--<dependency>
+            <groupId>org.scenic-view</groupId>
+            <artifactId>scenic-view</artifactId>
+            <version>11.0.2</version>
+        </dependency>-->
     </dependencies>
 
     <profiles>
