--- a/App/src/main/resources/com/gluonhq/chat/views/login.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/login.properties
@@ -1,3 +1,3 @@
-label.text.1=Welcome to the Chat app.\n\nPlease, enter your name:
+label.text.1=Welcome to the Chat app.\n\nPlease, enter your username:
 button.text=Register and start
-message.name.unavailable=Name already registered. Please try another one!
+message.name.unavailable=Username already registered. Please try another one!
