--- a/App/src/main/resources/com/gluonhq/chat/views/chat.properties
+++ b/App/src/main/resources/com/gluonhq/chat/views/chat.properties
@@ -9,6 +9,6 @@ popup.image.text=Upload an image
 popup.location.icon=\uf041
 popup.location.text=Share your location
 textarea.prompt.text=Type something...
-no.messages.yet=No messages yet
+select.channel=Please select a channel
 unread.message=unread message
 unread.messages=unread messages
